--- a/package.json
+++ b/package.json
@@ -14,14 +14,9 @@
   "contributes": {
     "commands": [
       {
-        "command": "controller-view.openEditor",
-        "category": "AC editor",
-        "title": "Animation Controller Editor"
-      },
-      {
-        "command": "controller-view.selectButton",
-        "category": "AC editor",
-        "title": "Select Button"
+        "command": "controller-view.openViewer",
+        "category": "AC Viewer",
+        "title": "AC Viewer: Open Viewer"
       }
     ]
   },
@@ -31,11 +26,11 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.94.0",
     "@types/mocha": "^10.0.8",
     "@types/node": "20.x",
-    "eslint": "^9.11.1",
+    "@types/vscode": "^1.94.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.11.1"
   }
 }
