--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "controller-view",
   "displayName": "Animation Controller Graph Viewer",
   "description": "Visual graph viewer for Minecraft Bedrock animation controller files",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "Pixelmancer",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.60.0"
   },
