--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/controller-view.git"
+    "url": "https://github.com/thePixelmancer/controller-view"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/controller-view/issues"
+    "url": "https://github.com/thePixelmancer/controller-view/issues"
   },
-  "homepage": "https://github.com/yourusername/controller-view#readme",
+  "homepage": "https://github.com/thePixelmancer",
   "license": "MIT"
 }
